added ts to read and write and http server

--- a/week08_intro_to_node/read-and-write/package.json
+++ b/week08_intro_to_node/read-and-write/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "http-module",
+    "name": "typescript",
     "version": "1.0.0",
-    "main": "index.ts",
+    "main": "index.js",
     "type": "module",
     "scripts": {
-        "dev": "node --watch index.ts",
-        "start": "node index.ts"
+        "compile": "tsc",
+        "start": "node dist/app.js"
     },
     "keywords": [],
     "author": "",
