fe exercises actually comitted now

--- a/week08_intro_to_node/http-module/package.json
+++ b/week08_intro_to_node/http-module/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "http-module",
+    "name": "simple-web-server",
     "version": "1.0.0",
     "main": "index.ts",
     "type": "module",
