--- a/week08_intro_to_node/simple-web-server/package.json
+++ b/week08_intro_to_node/simple-web-server/package.json
@@ -1,14 +1,18 @@
 {
-    "name": "simple-web-server",
+    "name": "http-module",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "index.ts",
     "type": "module",
     "scripts": {
-        "dev": "node --watch index.js",
-        "start": "node index.js"
+        "dev": "node --watch index.ts",
+        "start": "node index.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "description": ""
+    "description": "",
+    "devDependencies": {
+        "@types/node": "^22.13.0",
+        "typescript": "^5.8.0"
+    }
 }
