--- a/week10_mongodb/file-upload/backend/package.json
+++ b/week10_mongodb/file-upload/backend/package.json
@@ -4,8 +4,8 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "dev": "node --watch index.js",
-        "start": "node index.js"
+        "dev": "tsx watch ./index.ts",
+        "start": "tsx ./index.ts"
     },
     "keywords": [],
     "author": "",
@@ -14,6 +14,14 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.19.2",
-        "multer": "^1.4.5-lts.1"
+        "multer": "^2.0.0"
+    },
+    "devDependencies": {
+        "@types/express": "^5.0.2",
+        "@types/multer": "^1.4.12",
+        "@types/node": "^22.13.0",
+        "dotenv": "^16.4.5",
+        "tsx": "^4.19.4",
+        "typescript": "^5.8.0"
     }
 }
