--- a/week10_mongodb/file-upload/backend/package.json
+++ b/week10_mongodb/file-upload/backend/package.json
@@ -17,6 +17,7 @@
         "multer": "^2.0.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.18",
         "@types/express": "^5.0.2",
         "@types/multer": "^1.4.12",
         "@types/node": "^22.13.0",
