--- a/week10_mongodb/file-upload-end/backend/tsconfig.json
+++ b/week10_mongodb/file-upload-end/backend/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleDetection": "force",
 
     // Ignore module structure
-    "module": "Preserve",
+    "module": "nodenext",
 
     // Allow JSON modules to be imported
     "resolveJsonModule": true,
