file upload old version to ts

--- a/week10_mongodb/file-upload-cloudinary/backend/tsconfig.json
+++ b/week10_mongodb/file-upload-cloudinary/backend/tsconfig.json
@@ -19,6 +19,7 @@
     // Disallow features that require cross-file awareness
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
+    "erasableSyntaxOnly": true,
     "strict": true,
     "outDir": "dist"
   }
