--- a/week10_mongodb/file-upload-end/backend/package.json
+++ b/week10_mongodb/file-upload-end/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node -r dotenv/config --watch index.js",
-    "start": "node index.js"
+    "dev": "tsx watch -r dotenv/config ./index.ts",
+    "start": "tsx ./index.ts"
   },
   "keywords": [],
   "author": "",
