--- a/week10_mongodb/file-upload-end/backend/package.json
+++ b/week10_mongodb/file-upload-end/backend/package.json
@@ -12,17 +12,17 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@types/formidable": "^3.4.5",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "formidable": "^3.5.4",
     "mongoose": "^8.15.1",
-    "multer": "^2.0.1",
     "zod": "^3.25.48"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/multer": "^1.4.13",
     "@types/node": "^24.0.3",
     "dotenv": "^16.5.0",
     "tsx": "^4.20.3",
